Function encerrarVotacao now clears all voters state